# FixProtoGPT

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
config/: .env.example  model_config.yaml
documentation/writeups/: AI_MODEL_DEEP_DIVE.md  OVERVIEW.md
model_store/: model_prefs.json
model_store/data/: symbol_cache.json
scripts/: launch_training.sh  migrate_user_ids.py  sync_symbols.py  train_all_versions.py
scripts/env/: control_panel.py  restart.sh  start.sh  status.sh  stop.sh
src/: __init__.py
src/api/: __init__.py  app.py  state.py
src/cli/: __init__.py  admin_cli.py  enhanced_cli.py
src/config/: __init__.py  env_config.py
src/core/: __init__.py  bpe_tokenizer.py  fix_reference.py  tokenizer.py  transformer.py  version_registry.py
src/data/: __init__.py  prepare_data.py  scraper.py  spec_monitor.py  symbol_resolver.py  twelve_data.py  version_detector.py
src/inference/: __init__.py  beam_search.py  constrained_decoder.py  enrichment.py  explainer.py  generate.py
src/persistence/: __init__.py  action_logger.py  interaction_logger.py  user_manager.py
src/services/: __init__.py  update_manager.py
src/training/: __init__.py  dataset.py  finetune.py  lora.py  train.py  training_status.py
src/utils/: __init__.py  data_quality.py  device.py  fix_converter.py  fix_enrichment.py  helpers.py  paths.py  quantization.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_inference.py  test_web.py
tests/training/: __init__.py  run_training.py  test_training.py
tests/unit/: __init__.py  test_action_logger.py  test_data_prepare.py  test_env_config.py  test_explainer.py  test_finetune.py  test_fix_converter.py  test_helpers.py  test_interaction_logger.py  test_ops.py  test_scraper.py  test_security.py  test_symbol_resolver.py  test_tokenizer.py  test_twelve_data.py  test_user_manager.py  test_version_registry.py
ui/js_src/: api.js  app.js  file-io.js  (+5 more)
(+54 files in other folders)
